--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fluentui/react": "^8.110.7",
+    "@fluentui/react-components": "^9.23.1",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -19,9 +21,17 @@
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-best-gradient-color-picker": "^2.2.20",
+    "react-color": "^2.19.3",
+    "react-color-palette": "^6.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
+    "react-gradient-color-picker-ts": "^3.1.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5"
+  },
+  "devDependencies": {
+    "@types/react-color": "^3.0.6"
   }
 }
